- reworked how Sleep handles &function literals--the compiler
  transforms these into a call against function('&function')--
  this has the benefit of providing more debug info in a trace
  and simplifying bridges that expect to receive a function as
  a parameter.
- BridgeUtilities.getIterator() throws an exception if the 
  value on the stack is not an iterator.

2.1-beta 26  (15 May 08)
===========
- removed extra key string conversion within ordered hashes.  
  may offer a performance speedup in some cases.
- changed default capacity of ordered hashes to 11 (previous
  value was 16 which is bad for random distribution of values)
- TaintUtils.taintAll now handles KeyValuePair objects
- added TaintUtils.taint(Stack) as another shortcut for bridge
  writers / integrators.
- BACKWARDS COMPAT WARNING: updated &indexOf and &lindexOf to
  return $null when no match is found.  This is a change from
  their original return value of -1.  $null is == to 0.  However
  this does enable a cleaner means for iterating with indexOf.

  $index = -1;
  while $index (indexOf($string, "token", $index + 1))
  {
     # ...
  }
  # do something with substr($string, $start + 1) 

- added &find("string", "regex", n) which returns the index of
  the substring matching the specified regex beginning at n.
  &matched() works to retrieve the matched groups from the
  substring.
- conducted a 3am cleanup of the RegexBridge--you know what 
  that means.
- updated array implementation to use a LinkedList in lieu of
  a Stack.  This offers better performance characteristics for
  most array operations.  The only real losing operation is
  random access which now has a worst case of O(n)
- inline functions now restore anonymous arguments and @_ prior
  to returning control to the parent function.
- renamed &subarray to &sublist(@array, n, m).  Updates to the
  returned &sublist will affect the parent list.
- updated &splice to use new ScalarArray sublist API... this