@@ -1,0 +1,2 @@
+println(map(&asc, split("", "abcdefg")));
+
